--- a/features/fixtures/ORM/stores.yml
+++ b/features/fixtures/ORM/stores.yml
@@ -91,6 +91,7 @@ AppBundle\Entity\Package:
     packageSet: '@package_set_1'
     description: ''
     short_code: 'AB'
+    color: '#a91de0'
   package_xl:
     name: 'XL'
     maxVolumeUnits: 3.0
@@ -98,6 +99,7 @@ AppBundle\Entity\Package:
     packageSet: '@package_set_1'
     description: ''
     short_code: 'AB'
+    color: '#a91de0'
 
 AppBundle\Entity\Store:
   store_1:
