--- a/cypress/fixtures/payment_methods.yml
+++ b/cypress/fixtures/payment_methods.yml
@@ -4,3 +4,8 @@ Sylius\Component\Payment\Model\PaymentMethod:
     currentLocale: fr
     name: Card
     enabled: true
+  payment_method_cash_on_delivery:
+    code: CASH_ON_DELIVERY
+    currentLocale: fr
+    name: Cash on delivery
+    enabled: true
