--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -28,7 +28,7 @@ profiles:
             #wait: true
             #valuesFiles:
             #- helm-skaffold-values.yaml
-            skipBuildDependencies: true # Skip helm dep build
+            #skipBuildDependencies: true # Skip helm dep build
             #recreatePods will pass --recreate-pods to helm upgrade
             #recreatePods: true
             #overrides builds an override values.yaml file to run with the helm deploy
