--- a/helm/osrm/values.yaml
+++ b/helm/osrm/values.yaml
@@ -11,9 +11,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-imagePullSecrets:
-  - name: registrykey
-
+imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
