--- a/cypress/fixtures/restaurants.yml
+++ b/cypress/fixtures/restaurants.yml
@@ -228,15 +228,15 @@ AppBundle\Entity\LocalBusiness:
   crazy_hamburger:
     name: Crazy Hamburger
     address: "@address_1"
-    openingHours: ['Mo-Su 09:30-23:59']
+    openingHours: [ 'Mo-Su 09:30-23:59' ]
     enabled: true
     contract: "@contract_1"
     edenred_enabled: false
     edenred_trcard_enabled: false
     edenred_sync_sent: false
     __calls:
-      - setMinimumAmount: ['delivery', 1500]
-      - setMinimumAmount: ['collection', 1500]
+      - setMinimumAmount: [ 'delivery', 1500 ]
+      - setMinimumAmount: [ 'collection', 1500 ]
       - addProduct: [ "@hamburger" ]
       - addProduct: [ "@cheeseburger" ]
       - addProduct: [ "@cheesecake" ]
@@ -265,15 +265,15 @@ AppBundle\Entity\LocalBusiness:
   pizza_express:
     name: Pizza Express
     address: "@address_2"
-    openingHours: ['Mo-Su 09:30-23:30']
+    openingHours: [ 'Mo-Su 09:30-23:30' ]
     enabled: true
     contract: "@contract_2"
     edenred_enabled: false
     edenred_trcard_enabled: false
     edenred_sync_sent: false
     __calls:
-      - setMinimumAmount: ['delivery', 1500]
-      - setMinimumAmount: ['collection', 1500]
+      - setMinimumAmount: [ 'delivery', 1500 ]
+      - setMinimumAmount: [ 'collection', 1500 ]
       - addProduct: [ "@pizza_margherita" ]
       - addProduct: [ "@pizza_reina" ]
       - addTaxon: [ "@pizza_express_menu" ]
@@ -281,7 +281,7 @@ AppBundle\Entity\LocalBusiness:
   zero_waste_inc:
     name: Zero Waste Inc.
     address: "@address_2"
-    openingHours: ['Mo-Su 09:30-23:30']
+    openingHours: [ 'Mo-Su 09:30-23:30' ]
     enabled: true
     contract: "@contract_3"
     edenred_enabled: false
@@ -289,8 +289,8 @@ AppBundle\Entity\LocalBusiness:
     edenred_sync_sent: false
     depositRefundEnabled: true
     __calls:
-      - setMinimumAmount: ['delivery', 1500]
-      - setMinimumAmount: ['collection', 1500]
+      - setMinimumAmount: [ 'delivery', 1500 ]
+      - setMinimumAmount: [ 'collection', 1500 ]
       - addReusablePackaging: [ "@packaging_acme" ]
       - addProduct: [ "@chicken_salad" ]
       - addTaxon: [ "@zero_waste_menu" ]
@@ -307,3 +307,13 @@ AppBundle\Entity\User:
         - false
     roles: [ 'ROLE_RESTAURANT' ]
     restaurants: [ '@crazy_hamburger' ]
+  restaurant_with_cash_on_delivery_owner:
+    __factory:
+      '@Nucleos\UserBundle\Util\UserManipulator::create':
+        - 'restaurant_with_cash_on_delivery_owner'
+        - '12345678'
+        - 'restaurant_with_cash_on_delivery_owner@coopcycle.org'
+        - true
+        - false
+    roles: [ 'ROLE_RESTAURANT' ]
+    restaurants: [ '@restaurant_with_cash_on_delivery' ]
