updated: service config

--- a/helm/coopcycle-platform/templates/service.yaml
+++ b/helm/coopcycle-platform/templates/service.yaml
@@ -4,12 +4,15 @@ metadata:
   name: {{ include "coopcycle-platform.fullname" . }}
   labels:
     {{- include "coopcycle-platform.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
+  {{- with .Values.service.ports }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   selector:
     {{- include "coopcycle-platform.selectorLabels" . | nindent 4 }}
