moved env vars to config map

--- a/.env.dist
+++ b/.env.dist
@@ -78,7 +78,8 @@ SONIC_PORT=1491
 VROOM_HOST=vroom:3000
 CENTRIFUGO_TOKEN_HMAC_SECRET_KEY=CentrifugoToken
 CENTRIFUGO_API_KEY=CentrifugoApiKey
-CENTRIFUGO_API_URL=http://centrifugo:8000/api
+CENTRIFUGO_URL=http://centrifugo:9000
+CENTRIFUGO_WEB_SOCKET=http://centrifugo:8000
 COOPCYCLE_GEOCODER_AUTOCONF_ENABLED=1
 EDENRED_AUTHENTICATION_BASE_URL=https://sso.sbx.edenred.io
 EDENRED_AUTHENTICATION_CLIENT_ID=YourEdenredAuthClientId
