--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -18,7 +18,8 @@ web_profiler:
     intercept_redirects: false
 
 monolog:
-    channels: ['checkout', 'push_notification', 'real_time_message'] # channels to use with autowire; https://symfony.com/doc/current/logging/channels_handlers.html#how-to-autowire-logger-channels
+    # channels to use with autowire are configured in config.yml
+    # https://symfony.com/doc/current/logging/channels_handlers.html#how-to-autowire-logger-channels
     handlers:
         main:
             type: rotating_file
