add: request id in messenger logs

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -139,6 +139,8 @@ framework:
             messenger.bus.default:
                 # https://symfony.com/doc/current/messenger.html#middleware-for-doctrine
                 middleware:
+                    # service ids that implement Symfony\Component\Messenger\Middleware\MiddlewareInterface
+                    - 'AppBundle\Messenger\RequestIdMiddleware'
                     # each time a message is handled, the Doctrine connection
                     # is "pinged" and reconnected if it's closed. Useful
                     # if your workers run for a long time and the database
