--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1043,9 +1043,8 @@ services:
     tags:
       - { name: monolog.logger, channel: coopcycle.tagging }
 
-  AppBundle\Log\RequestIdProcessor:
-
-  AppBundle\Log\RequestUriProcessor:
+  AppBundle\Log\:
+    resource: '../../src/Log/*'
 
   Symfony\Bridge\Monolog\Processor\RouteProcessor:
     tags:
