--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -49,21 +49,31 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: default_file
+            handler: forward_fingers_crossed
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
+        forward_fingers_crossed:
+          type: group
+          channels: ["!api", "!stripe", "!loopeat"]
+          members: [ default_file, logs_to_upload ]
         default_file:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
-            channels: ["!api", "!stripe", "!loopeat"]
             level: debug
             formatter: monolog.formatter.json
             max_files: 7
+        forward_channels:
+            type: group
+            channels: [ domain_event, checkout, coopcycle.order_processing, messenger, push_notification, real_time_message ]
+            members: [ logs_to_upload ]
         logs_to_upload:
+            # includes messages:
+            # channels listed in forward_channels: persist all messages
+            # for other channels: `fingers_crossed` is applied
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
-            level: info
+            level: debug
             formatter: monolog.formatter.json
             max_files: 2
         api:
