--- a/app/config/services/commands.yml
+++ b/app/config/services/commands.yml
@@ -166,3 +166,7 @@ services:
   AppBundle\Command\EmailCubeQueryResultCommand:
     tags:
       - { name: 'console.command', command: 'coopcycle:cube:email-results' }
+
+  AppBundle\Command\ExportTasksCommand:
+    tags:
+      - { name: 'console.command', command: 'coopcycle:export:tasks' }
