fixed: logger config

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -49,32 +49,34 @@ monolog:
         main:
             type: fingers_crossed
             action_level: warning
-            handler: forward_fingers_crossed
+            handler: default_file
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
-        forward_fingers_crossed:
-          type: group
-          members: [ default_file, fingers_crossed_to_upload ]
+        # use a separate fingers_crossed handler to include only excluded channels,
+        # due to `The channels configuration only works for top-level handlers.`
+        upload_fingers_crossed:
+            type: fingers_crossed
+            action_level: warning
+            # only re-include channels excluded by exclude_channels_from_upload, all other channels are included already
+            channels: [ php, cache, security, app, timing ]
+            handler: logs_to_upload
+            excluded_404s:
+              # regex: exclude all 404 errors from the logs
+              - ^/
         default_file:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
-            channels: ["!api", "!stripe", "!loopeat"]
             level: debug
             formatter: monolog.formatter.json
             max_files: 7
-        fingers_crossed_to_upload:
-          type: group
-          # only re-include channels excluded by exclude_channels_from_upload, all other channels are included already
-          channels: [ php, cache, app, timing ]
-          members: [ logs_to_upload ]
         exclude_channels_from_upload:
             type: group
-            channels: [ "!php", "!cache", "!app", "!timing" ]
+            channels: [ "!php", "!cache", "!security", "!app", "!timing" ]
             members: [ logs_to_upload ]
         logs_to_upload:
             # includes all messages from all channels except the channels listed in exclude_channels_from_upload
-            # in case of a warning or higher (see main/action_level) excluded channels are included by fingers_crossed_to_upload
+            # in case of a warning or higher (see upload_fingers_crossed/action_level) excluded channels are also included
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
             level: debug
