--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -49,39 +49,19 @@ monolog:
         main:
             type: fingers_crossed
             action_level: warning
-            handler: default_file
+            handler: forward_fingers_crossed
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
-        # use a separate fingers_crossed handler to include only excluded channels,
-        # due to `The channels configuration only works for top-level handlers.`
-        upload_fingers_crossed:
-            type: fingers_crossed
-            action_level: warning
-            # only re-include channels excluded by exclude_channels_from_upload, all other channels are included already
-            channels: [ php, cache, security, timing ]
-            handler: logs_to_upload
-            excluded_404s:
-              # regex: exclude all 404 errors from the logs
-              - ^/
+        forward_fingers_crossed:
+          type: group
+          members: [ default_file, upload_fingers_crossed ]
         default_file:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
             level: debug
             formatter: monolog.formatter.json
             max_files: 7
-        exclude_channels_from_upload:
-            type: group
-            channels: [ "!php", "!cache", "!security", "!timing" ]
-            members: [ logs_to_upload ]
-        logs_to_upload:
-            # includes all messages from all channels except the channels listed in exclude_channels_from_upload
-            # in case of a warning or higher (see upload_fingers_crossed/action_level) excluded channels are also included
-            type: rotating_file
-            path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
-            level: debug
-            formatter: monolog.formatter.json
-            max_files: 2
         api:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/api.%kernel.environment%.log"
@@ -169,6 +149,23 @@ monolog:
             channels: [edenred]
         console:
             type:  console
+
+        upload_fingers_crossed:
+            type: group
+            members: [ logs_to_upload ]
+            bubble: false #stop propagation to 'upload_always' to avoid double logging
+        upload_always:
+            type: group
+            channels: [ "!php", "!cache", "!security", "!timing" ]
+            members: [ logs_to_upload ]
+        logs_to_upload:
+            # includes all messages from all channels except the channels excluded in upload_always
+            # in case of a warning or higher (see main/action_level) excluded channels are also included
+            type: rotating_file
+            path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
+            level: debug
+            formatter: monolog.formatter.json
+            max_files: 2
 
 nucleos_profile:
     registration:
