--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -46,22 +46,6 @@ monolog:
     # channels to use with autowire are configured in config.yml
     # https://symfony.com/doc/current/logging/channels_handlers.html#how-to-autowire-logger-channels
     handlers:
-        main:
-            type: fingers_crossed
-            action_level: warning
-            handler: forward_fingers_crossed
-            excluded_404s:
-                # regex: exclude all 404 errors from the logs
-                - ^/
-        forward_fingers_crossed:
-          type: group
-          members: [ default_file, upload_fingers_crossed ]
-        default_file:
-            type: rotating_file
-            path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
-            level: debug
-            formatter: monolog.formatter.json
-            max_files: 7
         api:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/api.%kernel.environment%.log"
@@ -149,17 +133,32 @@ monolog:
             channels: [edenred]
         console:
             type:  console
-
-        upload_fingers_crossed:
-            type: group
-            members: [ logs_to_upload ]
+        main:
+            type: fingers_crossed
+            action_level: warning
+            channels: ~ # log all channels
+            handler: forward_fingers_crossed
+            excluded_404s:
+              # regex: exclude all 404 errors from the logs
+              - ^/
             bubble: false #stop propagation to 'upload_always' to avoid double logging
         upload_always:
-            type: group
+            type: filter
             channels: [ "!php", "!cache", "!security", "!timing" ]
-            members: [ logs_to_upload ]
+            min_level: info
+            handler: logs_to_upload
+
+        forward_fingers_crossed:
+            type: group
+            members: [ default_file, logs_to_upload ]
+        default_file:
+            type: rotating_file
+            path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
+            level: debug
+            formatter: monolog.formatter.json
+            max_files: 7
         logs_to_upload:
-            # includes all messages from all channels except the channels excluded in upload_always
+            # includes all info or higher messages from all channels except the channels excluded in upload_always
             # in case of a warning or higher (see main/action_level) excluded channels are also included
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
