--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -46,6 +46,19 @@ monolog:
     # channels to use with autowire are configured in config.yml
     # https://symfony.com/doc/current/logging/channels_handlers.html#how-to-autowire-logger-channels
     handlers:
+        main:
+            type: fingers_crossed
+            action_level: error
+            handler: default_file
+            excluded_404s:
+              # regex: exclude all 404 errors from the logs
+              - ^/
+        default_file:
+            type: rotating_file
+            path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
+            level: debug
+            formatter: monolog.formatter.json
+            max_files: 7
         api:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/api.%kernel.environment%.log"
@@ -133,36 +146,23 @@ monolog:
             channels: [edenred]
         console:
             type:  console
-        main:
-            type: fingers_crossed
-            action_level: warning
-            channels: ~ # log all channels
-            handler: forward_fingers_crossed
-            excluded_404s:
-              # regex: exclude all 404 errors from the logs
-              - ^/
-            bubble: false #stop propagation to 'upload_always' to avoid double logging
-        upload_always:
+
+        # include all info or higher messages from all channels except the channels excluded in channels
+        upload_info:
             type: filter
-            channels: [ "!php", "!cache", "!security", "!timing" ]
+            channels: [ "!php", "!cache", "!security" ]
             min_level: info
             handler: logs_to_upload
+        # still upload warning and higher messages from the excluded channels
+        upload_warning:
+            type: filter
+            channels: [ php, cache, security ]
+            min_level: warning
+            handler: logs_to_upload
 
-        forward_fingers_crossed:
-            type: group
-            members: [ default_file, logs_to_upload ]
-        default_file:
-            type: rotating_file
-            path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
-            level: debug
-            formatter: monolog.formatter.json
-            max_files: 7
         logs_to_upload:
-            # includes all info or higher messages from all channels except the channels excluded in upload_always
-            # in case of a warning or higher (see main/action_level) excluded channels are also included
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
-            level: info
             formatter: monolog.formatter.json
             max_files: 2
 
