--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -49,33 +49,16 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: forward_fingers_crossed
+            handler: default_file
             excluded_404s:
-                # regex: exclude all 404 errors from the logs
-                - ^/
-        forward_fingers_crossed:
-          type: group
-          channels: ["!api", "!stripe", "!loopeat"]
-          members: [ default_file, logs_to_upload ]
+              # regex: exclude all 404 errors from the logs
+              - ^/
         default_file:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/%kernel.environment%.log"
             level: debug
             formatter: monolog.formatter.json
             max_files: 7
-        forward_channels:
-            type: group
-            channels: [ domain_event, checkout, coopcycle.order_processing, messenger, push_notification, real_time_message ]
-            members: [ logs_to_upload ]
-        logs_to_upload:
-            # includes messages:
-            # channels listed in forward_channels: persist all messages
-            # for other channels: `fingers_crossed` is applied
-            type: rotating_file
-            path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
-            level: debug
-            formatter: monolog.formatter.json
-            max_files: 2
         api:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/api.%kernel.environment%.log"
@@ -100,7 +83,7 @@ monolog:
         timing:
             type: rotating_file
             path: "%env(APP_LOG_DIR)%/timing.%kernel.environment%.log"
-            level: info
+            level: debug
             max_files: 7
             channels: [timing]
         checkout:
@@ -163,6 +146,25 @@ monolog:
             channels: [edenred]
         console:
             type:  console
+
+        # include all info or higher messages from all channels except the channels excluded in channels
+        upload_info:
+            type: filter
+            channels: [ "!php", "!cache", "!security" ]
+            min_level: info
+            handler: logs_to_upload
+        # still upload warning and higher messages from the excluded channels
+        upload_warning:
+            type: filter
+            channels: [ php, cache, security ]
+            min_level: warning
+            handler: logs_to_upload
+
+        logs_to_upload:
+            type: rotating_file
+            path: "%env(APP_LOG_DIR)%/logs_to_upload.%kernel.environment%.log"
+            formatter: monolog.formatter.json
+            max_files: 2
 
 nucleos_profile:
     registration:
