--- a/helm/smtp/templates/service.yaml
+++ b/helm/smtp/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: smtp
       protocol: TCP
-      name: http
+      name: smtp
   selector:
     {{- include "smtp.selectorLabels" . | nindent 4 }}
