--- a/helm/coopcycle-platform/values.yaml
+++ b/helm/coopcycle-platform/values.yaml
@@ -27,6 +27,14 @@ mercure:
   jwtSecret: "!ChangeThisMercureHubJWTSecretKey!"
   extraDirectives: cors_origins http://chart-example.local https://chart-example.local
 
+# dev-only dependency
+postgresql:
+  enabled: false
+
+# dev-only dependency
+minio:
+    enabled: false
+
 # Full configuration: https://github.com/bitnami/charts/tree/main/bitnami/redis
 redis:
   enabled: true
@@ -61,8 +69,9 @@ osrm:
 mjml:
   enabled: true
 
+# dev-only dependency
 smtp:
-  enabled: true
+  enabled: false
 
 imagePullSecrets: []
 nameOverride: ""
