--- a/src/Resources/config/serialization.yml
+++ b/src/Resources/config/serialization.yml
@@ -214,11 +214,11 @@ AppBundle\Entity\Delivery\FailureReason:
 Sylius\Component\Payment\Model\Payment:
   attributes:
     amount:
-      groups: ['payment', 'order_configure_payment']
+      groups: ['payment', 'order_configure_payment', 'payment_details']
     method:
-      groups: ['payment', 'order_configure_payment']
+      groups: ['payment', 'order_configure_payment', 'payment_details']
 
 Sylius\Component\Payment\Model\PaymentMethod:
   attributes:
     code:
-      groups: ['payment', 'order_configure_payment']
+      groups: ['payment', 'order_configure_payment', 'payment_details']
