Add missing command.

--- a/app/config/services/commands.yml
+++ b/app/config/services/commands.yml
@@ -170,3 +170,7 @@ services:
   AppBundle\Command\ExportTasksCommand:
     tags:
       - { name: 'console.command', command: 'coopcycle:export:tasks' }
+
+  AppBundle\Command\ExportOrdersCommand:
+    tags:
+      - { name: 'console.command', command: 'coopcycle:export:orders' }
