--- a/features/fixtures/ORM/stores.yml
+++ b/features/fixtures/ORM/stores.yml
@@ -107,6 +107,7 @@ AppBundle\Entity\Store:
     address: "@address_1"
     enabled: true
     pricingRuleSet: '@pricing_rule_set_1'
+    packageSet: '@package_set_1'
     timeSlot: '@time_slot_1'
     __calls:
       - addAddress: [ "@address_1" ]
