added: test 'business account; manager; onboarding' flow

--- a/cypress/fixtures/admin_user.yml
+++ b/cypress/fixtures/admin_user.yml
@@ -1,5 +1,5 @@
 AppBundle\Entity\User:
-  bob:
+  admin:
     __factory:
       '@Nucleos\UserBundle\Util\UserManipulator::create':
         - 'admin'
