--- a/cypress/fixtures/dispatch.yml
+++ b/cypress/fixtures/dispatch.yml
@@ -2,7 +2,7 @@ include:
   - settings.yml
   - sylius_channels.yml
   - addresses.yml
-  - users.yml
+  - admin_user.yml
 
 AppBundle\Entity\User:
   jane:
