--- a/cypress/fixtures/dispatch.yml
+++ b/cypress/fixtures/dispatch.yml
@@ -1,8 +1,5 @@
 include:
-  - settings.yml
-  - sylius_channels.yml
-  - addresses.yml
-  - admin_user.yml
+  - base.yml
 
 AppBundle\Entity\User:
   jane:
