--- a/cypress/fixtures/stores.yml
+++ b/cypress/fixtures/stores.yml
@@ -1,8 +1,6 @@
 include:
-  - settings.yml
-  - sylius_channels.yml
+  - base.yml
   - sylius_taxation.yml
-  - payment_methods.yml
 
 AppBundle\Entity\Base\GeoCoordinates:
   geo_1:
