--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@ APP_DEBUG=1
 APP_SECRET=ThisTokenIsNotSoSecretChangeIt
 APP_HOST=nginx
 GOOGLE_API_KEY=
-S3_ENDPOINT=minio:9000
+S3_ENDPOINT=http://minio:9000
 S3_REGION=fr-fr
 S3_BUCKET=images
 S3_CREDENTIALS_KEY=minio
@@ -123,3 +123,7 @@ EDENRED_SYNCHRONIZER_BASE_URL=https://edenred-synchronizer.coopcycle.org/api/
 EDENRED_SYNCHRONIZER_API_KEY=
 PAYGREEN_ENVIRONMENT=SANDBOX
 PAYGREEN_ENABLED=0
+CUBEJS_DUCKDB_S3_ENDPOINT=minio:9000
+CUBEJS_DUCKDB_S3_REGION=fr-fr
+CUBEJS_DUCKDB_S3_ACCESS_KEY_ID=minio
+CUBEJS_DUCKDB_S3_SECRET_ACCESS_KEY=coopcycle
