--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -230,10 +230,10 @@ services:
       - CUBEJS_API_SECRET
       - CUBEJS_SCHEMA_PATH=schema
       - CUBEJS_CACHE_AND_QUEUE_DRIVER=memory
-      - CUBEJS_DB_DUCKDB_S3_ENDPOINT=${S3_ENDPOINT}
-      - CUBEJS_DB_DUCKDB_S3_REGION=${S3_REGION}
-      - CUBEJS_DB_DUCKDB_S3_ACCESS_KEY_ID=${S3_CREDENTIALS_KEY}
-      - CUBEJS_DB_DUCKDB_S3_SECRET_ACCESS_KEY=${S3_CREDENTIALS_SECRET}
+      - CUBEJS_DB_DUCKDB_S3_ENDPOINT=${CUBEJS_DUCKDB_S3_ENDPOINT}
+      - CUBEJS_DB_DUCKDB_S3_REGION=${CUBEJS_DUCKDB_S3_REGION}
+      - CUBEJS_DB_DUCKDB_S3_ACCESS_KEY_ID=${CUBEJS_DUCKDB_S3_ACCESS_KEY_ID}
+      - CUBEJS_DB_DUCKDB_S3_SECRET_ACCESS_KEY=${CUBEJS_DUCKDB_S3_SECRET_ACCESS_KEY}
       - CUBEJS_DB_DUCKDB_S3_USE_SSL=false
       - CUBEJS_DB_DUCKDB_S3_URL_STYLE=path
     volumes:
