--- a/.env.dist
+++ b/.env.dist
@@ -123,3 +123,4 @@ EDENRED_SYNCHRONIZER_BASE_URL=https://edenred-synchronizer.coopcycle.org/api/
 EDENRED_SYNCHRONIZER_API_KEY=
 PAYGREEN_ENVIRONMENT=SANDBOX
 PAYGREEN_ENABLED=0
+BILLING_ENABLED=0
