--- a/.env.dist
+++ b/.env.dist
@@ -127,3 +127,4 @@ CUBEJS_DUCKDB_S3_ENDPOINT=minio:9000
 CUBEJS_DUCKDB_S3_REGION=fr-fr
 CUBEJS_DUCKDB_S3_ACCESS_KEY_ID=minio
 CUBEJS_DUCKDB_S3_SECRET_ACCESS_KEY=coopcycle
+CUBEJS_DUCKDB_S3_PATH=/images/exports/%type%/instance=default
